[IMP] - improve intent results effectiveness